# Pinch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pinch.cpp
examples/: bad_return.pinch  box.pinch  valid.pinch
include/: AST.h  BorrowChecker.h  BorrowChecker.td  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h
mlir/: #BorrowChecker.cpp#  .#BorrowChecker.cpp  BorrowChecker.cpp  Dialect.cpp  LowerToLLVM.cpp  LowerToStd.cpp  MLIRGen.cpp
parser/: AST.cpp
